from dataclasses import dataclass 


@dataclass(init=False, repr=False, eq=False)
class TipoDedicacion():
    nombre: str
    observacion: str